Changes Done in both frontend and backend